# ufser

./: .gitignore  .gitlab-ci.yml  Doxyfile.in  Makefile.am  README.md  autogen  configure.ac  ufser.cpp  ufser.h  ufser.sln  ufser.vcxproj  ufser.vcxproj.filters  wany.h  wany.natvis
python/: uf_py.cpp  uf_py.h  uf_py_module.cpp
tests/: Makefile.am  leak.py  serialization.cc  serperf.cc  tools.h  uf.doctest  wany.cc  wany.vcxproj  wany.vcxproj.filters
